add count and favorite
