# internal/zikr/port/http/docs/swagger.json
@@ -6,8 +6,8 @@
     },
     "paths": {
         "/count": {
-            "post": {
-                "description": "This API create zikr count",
+            "patch": {
+                "description": "This API updates zikr count",
                 "consumes": [
                     "application/json"
                 ],
@@ -15,9 +15,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "count"
+                    "zikr-count"
                 ],
-                "summary": "Create zikr count",
+                "summary": "Update zikr count",
                 "parameters": [
                     {
                         "description": "account info",
@@ -43,9 +43,11 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/favorite": {
             "patch": {
-                "description": "This API updates zikr count",
+                "description": "This API marks zikr as favorite",
                 "consumes": [
                     "application/json"
                 ],
@@ -53,29 +55,35 @@
                     "application/json"
                 ],
                 "tags": [
-                    "count"
+                    "zikr-favorite"
                 ],
-                "summary": "Update zikr count",
+                "summary": "Mark zikr as favorite",
                 "parameters": [
                     {
-                        "description": "account info",
+                        "description": "body",
                         "name": "body",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.Count"
+                            "$ref": "#/definitions/model.IsFavorite"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Successful response",
+                        "description": "updated to favorite",
                         "schema": {
-                            "$ref": "#/definitions/model.Response"
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "invalid request body",
+                        "schema": {
+                            "type": "string"
                         }
                     },
                     "404": {
-                        "description": "Not Found",
+                        "description": "could not update",
                         "schema": {
                             "type": "string"
                         }
@@ -240,6 +248,20 @@
                     "type": "string"
                 },
                 "uzbek": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.IsFavorite": {
+            "type": "object",
+            "properties": {
+                "is_favorite": {
+                    "type": "boolean"
+                },
+                "user_guid": {
+                    "type": "string"
+                },
+                "zikr_guid": {
                     "type": "string"
                 }
             }
