# internal/zikr/port/model/zikr_favorites.go
@@ -1,6 +1,7 @@
 package model
 
-type Patch struct {
-	UserGuId string
-	Guid     string
+type IsFavorite struct {
+	UserGuId string `json:"user_guid"`
+	ZikrGuid string `json:"zikr_guid"`
+	IsFav    bool   `json:"is_favorite"`
 }
